alignment fixes innavbar and footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,15 +22,9 @@ body {
 	min-height: 100vh;
 }
 
-.wrapper {
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 0 10px;
-}
-
 ul {
 	list-style-type: none;
-	display: flex;
+	margin: 0;
 }
 
 a {
