--- a/src/components/BrandLogo/BrandLogo.scss
+++ b/src/components/BrandLogo/BrandLogo.scss
@@ -3,11 +3,14 @@
 // FIXME: These colors suck!
 a.navbar-brand {
 	font-family: "Fredericka the Great", cursive;
-	font-size: 1.43em;
+	font-size: 1.2em;
 	text-transform: uppercase;
 	text-decoration: unset;
-	color: #333333;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
+
+	h1 {
+		margin: 0;
+	}
 
 	span {
 		margin-right: 2px;
