--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -14,16 +14,17 @@
 	}
 
 	&-collapse {
-		width: $navbar-collapse-width;
-		list-style-type: none;
-		display: flex;
-		justify-content: center;
+		justify-content: flex-end;
+	}
+
+	&-nav {
+		margin-left: auto;
 
 		> li {
 			margin-right: $nav-li-margin-right;
 			text-align: center;
 			border: $nav-li-border;
-			flex: 1;
+
 			border-radius: $border-radius;
 
 			> a {
@@ -35,12 +36,17 @@
 				justify-content: center;
 				align-items: center;
 				height: $navbar-link-height;
+				width: $navbar-link-width;
 				text-transform: uppercase;
 				text-decoration: none;
 				letter-spacing: $letter-spacing;
 				opacity: $navbar-link-opacity;
 				white-space: nowrap;
 				cursor: pointer;
+
+				&:hover {
+					color: rgba(#000, 0.85);
+				}
 			}
 
 			&:first-child {
