--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $nav-2nd-li-bd-color: lightgreen;
 $nav-3rd-li-bd-color: lightskyblue;
 $nav-4th-li-bd-color: lightslategray;
 $navbar-link-height: 50px;
+$navbar-link-width: 95px;
 $nav-li-margin-right: 8px;
 $border-radius: 2px;
 $letter-spacing: 1px;
